fix scrollbar in share overlay on load

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -925,7 +925,7 @@ section#address {
 	margin: 8px;
 	display: inline-block;
 	min-width: 40px;
-	min-height: 40px;
+	min-height: 30px;
 	background: url(/images/activity.gif) no-repeat 20% 0%;
 }
 
